# schnarziges

./: .gitmodules  README.md  VsDevCmd.bat  notes.txt  schnarzpad.txt  vs_2017.vssettings
cmake/: AddDeps.cmake  FindBulletPhysics.cmake  FindGLFW.cmake  FindGLI.cmake  FindGLM.cmake  FindImGui.cmake  FindLibraryDebugRelease.cmake  FindSteamAudio.cmake  FindVEZ.cmake  Findassimp.cmake  Findprotobuf.cmake
schnarzbench/: Schnarzbench.vcxproj  Schnarzbench.vcxproj.filters
schnarzbench/src/: schnarzbench.cpp
schnarzgame/: schnarzgame.sln  schnarzgame.vcxproj  schnarzgame.vcxproj.filters  update_3rdparty.bat
schnarzgame/src/: schnarzgame.cpp  targetver.h
schnarzmaschine/: CMakeLists.txt  create.bat  create64.bat  schnarzmaschine.sln  schnarzmaschine.vcxproj  schnarzmaschine.vcxproj.filters  update_3rdparty.bat
schnarzmaschine/include/sm/: api.h  array.hpp  command_queue.hpp  functional.hpp  game.h  logger.h  macro_util.hpp  schnarzmaschine.h  schnarzpad.h  scoped_timer.hpp  scoped_wait_timer.hpp  shared_string_view.hpp  stack_container.hpp  system_logger.hpp  thread_context.hpp
schnarzmaschine/include/sm/gfx/: app.h  render_context.h
schnarzmaschine/include/sm/gfx/private/: render_context_vk.hpp
schnarzmaschine/src/base/: dllmain.cpp  game.cpp  schnarzmaschine.cpp  targetver.h
schnarzmaschine/src/gfx/: app.cpp  render_context.cpp
